# postgres-mcp

./: .env.example  LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json
src/postgres_mcp/: db.py  db_client.py  server.py  tools.py
src/postgres_mcp/agent/: graph.py  nodes.py  prompts.py  state.py
tests/: test_tools.py
