[project]
name = "postgres-mcp"
version = "0.1.0"
description = "MCP server exposing PostgreSQL query, EXPLAIN, and schema tools to Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
postgres-mcp = "postgres_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
